# django_aula

./: .gitignore  Makefile  pyproject.toml
src/agenda/: db.sqlite3
src/agenda/agenda/: settings.py  urls.py
src/agenda/contato/: admin.py  api.py  forms.py  models.py  serializers.py  urls.py  views.py
src/agenda/contato/management/commands/: runapscheduler.py
src/agenda/contato/migrations/: 0001_initial.py  0002_categoria_contato_data_atualizacao_and_more.py  0003_alter_contato_fone_alter_contato_nome.py
src/agenda/contato/templates/: 404.html  contatos.html  detalhes.html  editar.html  master.html
