[tool.poetry]
name = "agenda"
version = "0.1.0"
description = "Agenda de Contatos"
authors = ["Thiago Feldhaus <thiago.feldhaus@mrhat.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
jinja2 = "^3.1.2"
djangorestframework = "^3.14.0"
drf-nested-routers = "^0.93.4"
django-debug-toolbar = "^4.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
